Fixed #413 - added localization; buttons no longer hiding text if browser is too small

--- a/src/main/resources/static/css/dark/style.css
+++ b/src/main/resources/static/css/dark/style.css
@@ -493,13 +493,18 @@ input[type="radio"]:not(:checked) + span::before, [type="radio"]:not(:checked) +
     margin: auto
 }
 
+.btn-flat {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .home-menu-flex {
     display: flex;
     flex-wrap: wrap;
 }
 
 .home-menu-flex .col {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 }
 
 .home-menu-link {
